# a2a-practice

./: README.md
a2a-samples/helloworld/: minimum_server.py  test_client.py
a2a-samples/helloworld/call_from_adk/: agent.py
a2a-samples/helloworld/samples-helloworld/: pyproject.toml
